4/23/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Fix date added to ChangeLog's.

4/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (DIST_SUBDIRS): Added lib.

4/14/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Remove --enable-maintainer-mode.
	* configure.in (AM_MAINTAINER_MODE): Removed.

4/14/2006 Bob Rossi <bob@brasko.net>

	* configure.in (AC_INIT): Update version.

4/14/2006 Bob Rossi <bob@brasko.net>

	* README: Document better how to build CGDB.

4/14/2006 Bob Rossi <bob@brasko.net>

	* autoregen.sh: Call lib/gdbmi autoregen script also.
	* configure.in (AC_CONFIG_SBUDIRS): Add call to lib/gdbmi.
	(AC_OUTPUT): Remove lib/gdbmi/Makefile lib/gdbmi/src/Makefile.

4/14/2006 Bob Rossi <bob@brasko.net>

	* BRANCHES: Removed file.
	* TODO: Added, used to be RELEASE_TODO.
	* RELEASE_TODO: Removed.
	* FAQ: Quick fix.

4/14/2006 Bob Rossi <bob@brasko.net>

	* Removed all autoconf generated files from CVS.

4/13/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (SUBDIRS): Added gdbmi.
	* Makefile.in: Autogenerated.
	* configure: Autogenerated.
	* configure.in (AC_OUTPUT): Added gdbmi.

4/13/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Note about c89 conformance.

4/10/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Note about cgdb.txt being installed.
	* autorelease.sh: No longer run ht.pl.
	* ht.pl: Removed.

4/09/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Remove software requirement.

version 0.6.2 (04/09/2006):

4/09/2006 Bob Rossi <bob@brasko.net>

	* auto-release.sh: Update script.

4/09/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Remove software requirement.
	* auto-release.sh: New release script.

4/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note.

4/05/2006 Bob Rossi <bob@brasko.net>

	* release-todo.txt: Fix cgdb.1 step.

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* aclocal.m4: Autogenerated.
	* config.h.in: Autogenerated.
	* configure: Autogenerated.